yaml/istio/node-app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: joel-node-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: joel-node-app
spec:
  hosts:
  - "*"
  gateways:
  - joel-node-app-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /main.css
    route:
    - destination:
        host: node-app-service
        port:
          number: 80
